fix(components): align chip close icon and demos with Vuesax 3.x

--- a/packages/theme-chalk/src/chip.scss
+++ b/packages/theme-chalk/src/chip.scss
@@ -21,8 +21,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    gap: 4px;
-    margin-left: 4px;
+    margin-left: 10px;
   }
 
   @include e(icon) {
@@ -57,48 +56,47 @@
     font: inherit;
     line-height: 1;
 
-    .#{$namespace}-icon-close {
-      position: static;
-      top: auto;
-      right: auto;
-      width: 12px;
-      height: 12px;
-      padding: 0;
-      margin: 0;
-      background: transparent;
-      box-sizing: border-box;
-
-      &::before,
-      &::after {
-        width: 10px;
-        background: rgb(255, 255, 255);
-      }
+    .#{$namespace}-icon {
+      font-size: 0.9rem;
+      color: rgb(255, 255, 255);
     }
 
     &:hover {
       background: getColor(danger);
 
-      .#{$namespace}-icon-close::before,
-      .#{$namespace}-icon-close::after {
-        background: rgb(255, 255, 255);
+      .#{$namespace}-icon {
+        color: rgb(255, 255, 255);
       }
     }
   }
 
-  .#{$namespace}-avatar {
+  .#{$namespace}-avatar-content {
     width: 24px;
     height: 24px;
     margin: 2px 0;
     margin-left: -8px;
     margin-right: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.15);
+    flex-shrink: 0;
+
+    .#{$namespace}-avatar {
+      background: rgba(0, 0, 0, 0.15);
+    }
+
+    .material-icons {
+      margin-top: 0;
+      font-size: 0.8rem;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: inherit;
+    }
   }
 
   @include when(colored) {
-    .#{$namespace}-avatar {
+    .#{$namespace}-avatar-content .#{$namespace}-avatar {
       background: rgba(255, 255, 255, 0.2);
     }
   }
